tests/ui/traits/trait-upcasting/alias-where-clause-isnt-supertrait.stderr
error[E0308]: mismatched types
  --> $DIR/alias-where-clause-isnt-supertrait.rs:26:5
   |
LL | fn test(x: &dyn C) -> &dyn B {
   |                       ------ expected `&dyn B` because of return type
LL |     x
   |     ^ expected trait `B`, found trait `C`
   |
   = note: expected reference `&dyn B`
              found reference `&dyn C`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
